# medical-rag-agent

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  LICENSE  MORNING_REPORT.md  README.md  get_fillings.py  pyproject.toml  rag.ipynb  requirements-docker.txt
.github/workflows/: eval.yml
agent/: __init__.py  config.py  domains.py  embeddings.py  graph.py  llm_provider.py  retriever.py  run.py  tracing.py
app/: gradio_app.py  main.py
deploy/: DEPLOY.md  hf-space-README.md
evals/: judge.py  load_golden.py  make_summary_gemini.py  retrieval_ablation.py  run_eval.py  test_quality.py
evals/golden/: golden.jsonl  golden_medical.jsonl
evals/mirage/: load_mirage.py  run_mirage.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
ingest/: build_index_fast.py  build_medical_index.py  build_statpearls.py  check_agent_medical.py  check_retrieval.py
logs/: step1_chroma_med_build.txt  step1_golden_support.txt  step2_retrieval_after_statpearls.txt  step2_retrieval_before_textbooks_only.txt  step3_medcpt_build.txt  step3_medcpt_retrieval.txt  step3_mirage_ablation.txt  step3_mirage_medcpt_run.txt  step3b_mirage_research_general.txt  step3b_research_summary.txt  step4_mirage_smoke_general.txt  step4_ragas_medical_run.txt  step4_ragas_summary.txt  step5_ragas_smoke_medical.txt  step5_retrieval_ablation.txt
logs/results/: mirage_general_exam.json  mirage_general_with_research.json  mirage_medcpt_exam.json  ragas_medical_partial.json  retrieval_ablation.json
